
*should* have fixed soem multihead issues - have still to test..
(shoudl restart correctly, exit correcttly, restart anotherwm correctly and
restart themes correctly)


-------------------------------------------------------------------------------

Wed Sep 22 13:39:22 PDT 1999
(Raster)

get rid of fprintf debug messags

-------------------------------------------------------------------------------

Wed Sep 22 15:37:25 PDT 1999
(Mandrake)

fixed a bug in kde support that caused E to potentially crash on property
events upon deletion by a window.

-------------------------------------------------------------------------------

Wed Sep 22 15:41:28 PDT 1999
(Raster)

some more multihead fixes...

-------------------------------------------------------------------------------

Wed Sep 22 16:08:01 PDT 1999
(Raster)

make the memory debugging stuff better commented - and add ipc call tyo 
dump mem debug info

-------------------------------------------------------------------------------

Wed Sep 22 16:39:43 PDT 1999
(Mandrake)

moved kde client change property handler a little, but I don't think this is
going to make a difference.

-------------------------------------------------------------------------------

Wed Sep 22 17:55:48 PDT 1999
(KainX)

Added a "query" command to the imageclass IPC.  This is for an Eterm
feature.

-------------------------------------------------------------------------------

Wed Sep 22 18:21:40 PDT 1999
(KainX)

Ergh...let's not go freeing image classes willy-nilly, shall we?

-------------------------------------------------------------------------------

Wed Sep 22 20:07:31 PDT 1999
(Raster)

disabel pagers and icobnoxes form going into groups - ok theres a bug 
restoring them and i've had enough of looking at that code.. so i simply
disabled it. much simpler.

-------------------------------------------------------------------------------

Wed Sep 22 20:17:22 PDT 1999
(Raster)

get rid of printf.......